rewrite test with openrewrite